[package]
name = "keywhisker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keycat = { git = "https://github.com/antler5/keycat", features = ["serde"] }
keymeow = { git = "https://github.com/antler5/keymeow" }
km_data = { git = "https://github.com/antler5/km_data", features = ["download"] }
rmp-serde = "1.1.2"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.81"
rand = "0.8.5"
linya = "0.3.0"
serde_json = "1.0.115"
indexmap = "2.7.1"
atty = "0.2.14"
ratatui = "0.29.0"

